--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/chai": "^4.0.5",
     "@types/mocha": "^2.2.44",
     "@types/nock": "^8.2.1",
+    "@types/sinon": "^4.0.0",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "nock": "^9.1.0"
+    "nock": "^9.1.0",
+    "sinon": "^4.1.2"
   },
   "dependencies": {
     "@types/request-promise-native": "^1.0.10",
