--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "sinon": "^4.1.2"
   },
   "dependencies": {
+    "@types/jsdom": "^11.0.4",
     "@types/request-promise-native": "^1.0.10",
+    "jsdom": "^11.5.1",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
   }
